recursion.hanoi.InterleavedHanoi.scala.error
Compilation error:
InterleavedHanoi:7: error: not found: value hanoi
    hanoi(height-1,src1,src2,dst,other)
    ^InterleavedHanoi:8: error: not found: value hanoi
    hanoi(1,src1,other,src2,dst)
    ^InterleavedHanoi:9: error: not found: value hanoi
    hanoi(height-1,other,src2,src1,dst)
    ^